# pivlib

./: .gitignore  CHANGELOG.md  CHARTER.md  CLAUDE.md  CNAME  Cargo.toml  LICENSE.md  Makefile  README.md  SPEC.md  build.sh  index.md  package.json
_site/: index.html
apps/vscode-extension/: package.json  tsconfig.json
apps/vscode-extension/src/: extension.ts  preview.ts
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
apps/web/public/: wasi_snapshot_preview1.js
apps/web/src/: App.tsx  index.css  samples.ts  vite-env.d.ts
apps/web/src/components/: Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Logo.tsx  TestDataSources.tsx  ToolkitGrid.tsx
apps/web/src/components/tools/: CccDecoder.tsx  CertInspector.tsx  ChuidDecoder.tsx  CrlInspector.tsx  CsrInspector.tsx  EncodingDetector.tsx  FileDrop.tsx  FingerprintEncoder.tsx  GenericInspector.tsx  KeyInspector.tsx  LoadSampleBar.tsx  Pkcs12Inspector.tsx  Pkcs7Inspector.tsx  PortraitEncoder.tsx  SecurityObjectDecoder.tsx
apps/web/src/lib/: wasm.ts
crates/pivlib/: Cargo.toml  build.rs
crates/pivlib/nbis/: README.md
crates/pivlib/nbis/patches/: no_file_io.patch
crates/pivlib/nbis/shims/: mem_io.h  mindtct_mem.c  mindtct_mem.h  wsq_mem.c
crates/pivlib/src/: ccc.rs  chuid.rs  crl.rs  csr.rs  encoding.rs  error.rs  key.rs  lib.rs  pkcs12.rs  pkcs7.rs  security_object.rs  wasm.rs
crates/pivlib/src/cbeff/: mod.rs
crates/pivlib/src/cert/: mod.rs  parse.rs  piv_role.rs
crates/pivlib/src/face/: incits385.rs  mod.rs
crates/pivlib/src/finger/: incits378.rs  incits381.rs  mod.rs  wsq.rs
crates/pivlib_cli/: Cargo.toml
crates/pivlib_cli/src/: main.rs
crates/pivlib_fixtures/: Cargo.toml
crates/pivlib_fixtures/src/: ccc.rs  cert.rs  chuid.rs  crl.rs  csr.rs  finger.rs  key.rs  main.rs  pkcs12.rs  pkcs7.rs  portrait.rs  security_object.rs
docs/README/: index.html
scripts/: trust-report.sh
tests/fixtures/: card_auth.cer  chain.p7b  content_signing.cer  demo.p12  digital_signature.cer  fingerprint_synthetic.wsq  key_management.cer  piv_auth.cer  piv_auth.csr  piv_auth.p8  piv_ca.cer  revocation_list.crl  root_ca.cer
