[package]
name = "pivlib"
description = "PIV/PKI toolkit: X.509 + CSR + CRL + PKCS#7/#8/#12 + CHUID/CCC/SecurityObject + CBEFF biometric encoding"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

# Compile the NBIS C library and enable WSQ decode + mindtct minutiae
# extraction. Requires the vendored nbis/ tree (already in this crate) plus a
# WASI SDK toolchain when building for wasm32-unknown-unknown.
nbis = []

# WASM bindings surface (gated so native CLI doesn't pull in wasm-bindgen).
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
]

[dependencies]
# RustCrypto PKI stack
der = { workspace = true }
spki = { workspace = true }
x509-cert = { workspace = true }
cms = { workspace = true }
pkcs8 = { workspace = true }
pkcs12 = { workspace = true }
const-oid = { workspace = true }
pem-rfc7468 = { workspace = true }
flagset = { workspace = true }

# Encoding helpers
base64 = { workspace = true }
hex = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Biometric pipeline (moved from app.pivlib)
image = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }

# WASM (optional, gated behind the `wasm` feature)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
cc = "1"
glob = "0.3"
