[package]
name = "pivlib_cli"
description = "Inspect and transcode PIV/PKI files from the terminal"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "pivlib"
path = "src/main.rs"

[dependencies]
pivlib = { path = "../pivlib" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
pem-rfc7468 = { workspace = true }
anyhow = "1"
